--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "pages":[
+
+    "pages/demo/demo",
+    "pages/goods/goods",
     "pages/test/test",
     "pages/index/index",
     "pages/logs/logs"
@@ -11,5 +14,37 @@
     "navigationBarTextStyle":"black"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+  
+  "tabBar": {
+    "color": "#707070",
+    "selectedColor": "#1296db",
+    "borderStyle": "white",
+    "list": [
+      {
+        "pagePath": "pages/demo/demo",
+        "iconPath": "pages/demo/image/home.png",
+        "selectedIconPath": "pages/demo/image/home.png",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/test/test",
+        "iconPath": "pages/demo/image/cascades.png",
+        "selectedIconPath": "pages/demo/image/cascades.png",
+        "text": "分类"
+      },
+      {
+        "pagePath": "pages/logs/logs",
+        "iconPath": "pages/demo/image/cart.png",
+        "selectedIconPath": "pages/demo/image/cart.png",
+        "text": "购物车"
+      },
+      {
+        "pagePath": "pages/index/index",
+        "iconPath": "pages/demo/image/people.png",
+        "selectedIconPath": "pages/demo/image/people.png",
+        "text": "我的"
+      }
+    ]
+  }
 }
